src/global_styles.css
/* --- Start global styles --- */

/* Hide "Powered by Springshare" footer */
#s-lib-footer-public {
  display: none;
}

/* Override Springshare body-font-sans variable */
body {
  --bs-font-sans-serif:
    proxima-nova, calibri, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-body-font-family: var(--bs-font-sans-serif);
}

/* Hide Springshare's popover markup */
#s-lib-popover-title,
#s-lib-popover-content {
  display: none;
}

img {
  max-width: 100%;
}

/* Quick links dropdown */
.btn-libapps-header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  border-radius: 0.375rem;
  height: 36px;
  width: 36px;
}

.btn-libapps-header .close,
.btn-libapps-header.show .material-symbols-rounded {
  display: none;
}

.btn-libapps-header.show {
  background-color: #0c234b;
}

.btn-libapps-header.show .close {
  display: inline-block;
  color: #fff;
}

@media (max-width: 575.98px) {
  .dropdown-menu {
    position: fixed !important;
    top: 6px !important;
    border: none !important;
    border-radius: 0;
    width: 100vw;
  }
}

/* --- Start breadcrumb styles --- */
#s-lib-bc-site {
  display: none;
}

#s-lib-bc-list li:first-child a::before {
  content: "";
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin-right: 0.35rem;
  background: url("/images/icons/home.svg") center / contain no-repeat;
}

#s-lib-bc-list li:first-child a {
  display: inline-flex;
  align-items: center;
}

/* --- End global styles --- */

